commit to github

--- a/css_files/all-products.scss
+++ b/css_files/all-products.scss
@@ -6,7 +6,9 @@
 .page-head {
     width: 100vw;
     height: 80vh;
-    background-color: red;
+    // background: url(../website-images/gamingg.jpg);
+    // background-size: cover;
+    // background-attachment: fixed;
     display: flex;
     justify-content: center;
     align-items: center;
