--- a/css_files/product.css
+++ b/css_files/product.css
@@ -391,7 +391,7 @@ body .brand-promise .promise-grid {
 }
 
 body .brand-promise .promise-grid div {
-  margin: 0 40px;
+  margin: 10px 50px;
 }
 
 body .brand-promise .promise-grid div .img {
@@ -437,25 +437,33 @@ body .reviews .review-small {
   margin: 5vh auto;
 }
 
-body .reviews .review-small .review1, body .reviews .review-small .review2, body .reviews .review-small .review3 {
+body .reviews .review-small .review1,
+body .reviews .review-small .review2,
+body .reviews .review-small .review3 {
   width: 340px;
   height: 400px;
   position: relative;
-  margin: 10px  auto;
+  margin: 10px auto;
 }
 
-body .reviews .review-small .review1 .head, body .reviews .review-small .review2 .head, body .reviews .review-small .review3 .head {
+body .reviews .review-small .review1 .head,
+body .reviews .review-small .review2 .head,
+body .reviews .review-small .review3 .head {
   width: 100%;
   height: 50%;
   text-align: center;
-  background-color: #cbcbee;
+  background-color: transparent;
+  border: 2px solid #cbcbee;
+  border-bottom: none;
   position: relative;
   border-top-right-radius: 10px;
   border-top-left-radius: 10px;
 }
 
-body .reviews .review-small .review1 .head img, body .reviews .review-small .review2 .head img, body .reviews .review-small .review3 .head img {
-  width: 170px;
+body .reviews .review-small .review1 .head img,
+body .reviews .review-small .review2 .head img,
+body .reviews .review-small .review3 .head img {
+  width: 120px;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -463,11 +471,255 @@ body .reviews .review-small .review1 .head img, body .reviews .review-small .rev
           transform: translate(-50%, -50%);
 }
 
-body .reviews .review-small .review1 .tail, body .reviews .review-small .review2 .tail, body .reviews .review-small .review3 .tail {
-  padding: 60px 30px 30px 30px;
+body .reviews .review-small .review1 .tail,
+body .reviews .review-small .review2 .tail,
+body .reviews .review-small .review3 .tail {
+  padding: 30px 30px 30px 30px;
   background-color: red;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
+}
+
+body .reviews .review-small .review1 .tail h5,
+body .reviews .review-small .review2 .tail h5,
+body .reviews .review-small .review3 .tail h5 {
+  text-align: right;
+}
+
+body .wireless_earphones_common {
+  width: 100%;
+  height: 80vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+body .wireless_earphones_common .part1,
+body .wireless_earphones_common .part2 {
+  width: 50%;
+  height: 100%;
+}
+
+body .wireless_earphones_common .part1 {
+  background-color: #e40a0a;
+  padding: 20px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .wireless_earphones_common .part1 .info1 {
+  width: 70%;
+  margin: auto;
+}
+
+body .wireless_earphones_common .part1 .info1 img {
+  width: 300px;
+  height: 300px;
+}
+
+body .wireless_earphones_common .part2 {
+  background-color: #363636;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: url(../website-images/backgroung-image-4.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+  border-radius: 50%background-colorred;
+}
+
+body .wireless_earphones_common .part2 .info2 {
+  width: 70%;
+}
+
+body .wireless_earphones_common .part2 .info2 .wireless_circle {
+  margin: 40px auto;
+  width: 270px;
+  height: 270px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .wireless_earphones_common .part2 .info2 .wireless_circle img {
+  height: 130%;
+  width: 130%;
+}
+
+body .powered_by {
+  width: 100vw;
+  height: 65vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: url(../website-images/background-image-5.jpg);
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+body .powered_by .img {
+  width: 50%;
+  height: 100%;
+  padding: 30px 50px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .powered_by .img .i {
+  width: 280px;
+  height: 330px;
+  overflow: visible;
+  border-radius: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .powered_by .img .i img {
+  width: 135%;
+  height: 135%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+body .powered_by .content {
+  width: 50%;
+  height: 100%;
+  padding: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .water_resistance {
+  width: 100vw;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 60vh;
+  padding: 20px 10vw;
+  background-color: #272525;
+}
+
+body .water_resistance .ib {
+  width: 40%;
+}
+
+body .water_resistance .ib .ii {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .water_resistance .ib .ii img {
+  height: 130%;
+  width: 130%;
+}
+
+body .water_resistance .content {
+  padding: 30px;
+}
+
+body .one-click {
+  padding: 20px;
+  background-color: grey;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body .one-click .hey_siri {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  border-radius: 50%;
+  margin-right: 30px;
+  text-align: center;
+}
+
+body .one-click .hey_siri img {
+  height: 80px;
+  width: 80px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 50%;
+}
+
+body .one-click .one-click-text {
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0 20px;
+  border-left: 3px solid white;
 }
 
 body .scroll-top {
