--- a/css_files/style.css
+++ b/css_files/style.css
@@ -11,53 +11,16 @@
   display: none;
 }
 
+button, input {
+  cursor: pointer;
+}
+
 body {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
   width: 100vw;
   background-color: black;
-}
-
-body .shop, body .more {
-  background-color: red;
-  padding: 40px;
-  min-width: 200px;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
-  height: fit-content;
-  z-index: 100000;
-  position: fixed;
-  top: 40%;
-  left: 50%;
-  -webkit-transform: translate(-50%, 50%);
-          transform: translate(-50%, 50%);
-  text-align: center;
-  display: none;
-}
-
-body .shop button, body .more button {
-  width: 20px;
-  height: 20px;
-  border: none;
-  background-color: transparent;
-  position: absolute;
-  right: 10px;
-  top: 10px;
-  cursor: pointer;
-}
-
-body .shop button img, body .more button img {
-  height: 100%;
-  width: 100%;
-}
-
-body .shop ul li, body .more ul li {
-  list-style: none;
-}
-
-body .shop ul li a, body .more ul li a {
-  text-decoration: none;
 }
 
 body .carousel-image {
@@ -79,6 +42,7 @@ body .carousel-image .flex {
           justify-content: center;
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 body .carousel-image .flex h1 {
@@ -466,12 +430,24 @@ body .website-content .top-seller .smart-watches .card-1 .tail .order-btn input,
 body .website-content .top-seller .trending-wireless .card-1 .tail .order-btn input {
   width: 100%;
   padding: 8px 0;
-  background-color: red;
+  background: -webkit-gradient(linear, left top, right top, from(#fe3e3e), to(#d40404));
+  background: linear-gradient(to right, #fe3e3e, #d40404);
   color: white;
   border: none;
   font-size: medium;
   font-weight: bolder;
   font-family: "Poppins", sans-serif;
+}
+
+body .website-content .top-seller .top-picks .card-1 .tail .yellow-btn input,
+body .website-content .top-seller .watches .card-1 .tail .yellow-btn input,
+body .website-content .top-seller .gaming .card-1 .tail .yellow-btn input,
+body .website-content .top-seller .trending-wired .card-1 .tail .yellow-btn input,
+body .website-content .top-seller .smart-watches .card-1 .tail .yellow-btn input,
+body .website-content .top-seller .trending-wireless .card-1 .tail .yellow-btn input {
+  background: -webkit-gradient(linear, left top, right top, from(#f8f833), to(#dede1f));
+  background: linear-gradient(to right, #f8f833, #dede1f);
+  color: black;
 }
 
 body .website-content .top-seller .top-picks .card-1:hover,
@@ -480,170 +456,7 @@ body .website-content .top-seller .gaming .card-1:hover,
 body .website-content .top-seller .trending-wired .card-1:hover,
 body .website-content .top-seller .smart-watches .card-1:hover,
 body .website-content .top-seller .trending-wireless .card-1:hover {
-  background-color: black;
-  outline: 1px solid #ceceee;
-}
-
-body .website-content .new-launches {
-  margin: 5vh 0;
-  padding: 0 5vw;
-}
-
-body .website-content .new-launches h1 {
-  text-align: center;
-  font-family: "Poppins", sans-serif;
-}
-
-body .website-content .new-launches h1 span {
-  color: red;
-  font-family: "Poppins", sans-serif;
-}
-
-body .website-content .new-launches .new-launch-product {
-  width: 90%;
-  margin: 50px auto;
-  height: 66vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-}
-
-body .website-content .new-launches .new-launch-product .img {
-  width: 45%;
-  height: 100%;
-  background-color: #ceceee;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  border-top-left-radius: 10px;
-  border-bottom-left-radius: 10px;
-}
-
-body .website-content .new-launches .new-launch-product .img img {
-  width: 70%;
-  height: 70%;
-  -o-object-fit: contain;
-     object-fit: contain;
-}
-
-body .website-content .new-launches .new-launch-product .product-description {
-  text-align: center;
-  padding: 20px 70px;
-  width: 55%;
-  background-color: white;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-}
-
-body .website-content .new-launches .new-launch-product .product-description p {
-  color: grey;
-}
-
-body .website-content .new-launches .new-launch-product .product-description .border-red {
-  width: 100px;
-  height: 1px;
-  background-color: red;
-  margin: 10px auto;
-}
-
-body .website-content .new-launches .new-launch-product .product-description h2 {
-  color: black;
-}
-
-body .website-content .new-launches .new-launch-product .product-description h2 span {
-  color: red;
-}
-
-body .website-content .new-launches .new-launch-product .product-description .special-launch-price {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  margin: 15px auto;
-  background-color: red;
-  color: white;
-  padding: 3px 20px;
-}
-
-body .website-content .new-launches .new-launch-product .product-description h3 {
-  color: red;
-  margin: 15px;
-}
-
-body .website-content .new-launches .new-launch-product .product-description .des-feature-btns {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  margin: 20px auto;
-}
-
-body .website-content .new-launches .new-launch-product .product-description .des-feature-btns .des-btn button {
-  background-color: black;
-  color: white;
-  padding: 5px 15px;
-  border: 1px solid black;
-}
-
-body .website-content .new-launches .new-launch-product .product-description .des-feature-btns .feature-btn button {
-  background-color: transparent;
-  border: 1px solid black;
-  color: black;
-  padding: 5px 15px;
-}
-
-body .website-content .new-launches .new-launch-product .product-description .space {
-  min-height: 100px;
-  margin: 10px 0;
-}
-
-body .website-content .new-launches .new-launch-product .product-description .description,
-body .website-content .new-launches .new-launch-product .product-description .features {
-  margin: 20px 0;
-  text-align: left;
-  color: black;
-}
-
-body .website-content .new-launches .new-launch-product .product-description .features ul {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  margin: auto;
-}
-
-body .website-content .new-launches .new-launch-product .product-description .features ul li {
-  color: black;
-  list-style: square;
-}
-
-body .website-content .new-launches .new-launch-product .product-description .buy-now {
-  margin: auto;
-}
-
-body .website-content .new-launches .new-launch-product .product-description .buy-now button {
-  width: 25%;
-  padding: 10px 0;
-  background-color: transparent;
-  color: red;
-  border: 1px solid red;
-  border-radius: 5px;
-  font-weight: bolder;
-  -webkit-transition: 0.3s ease;
-  transition: 0.3s ease;
-}
-
-body .website-content .new-launches .new-launch-product .product-description .buy-now button:hover {
-  background-color: red;
-  color: white;
+  background-color: #7b7bea;
 }
 
 body .website-content .what-people-says {
@@ -740,6 +553,13 @@ body .website-content .what-people-says .reviews .review .tail .tt button {
   border-radius: 5px;
   border: 1px solid white;
   margin: 20px 0 0 0;
+}
+
+body .website-content .what-people-says .reviews .review .tail .tt button input {
+  color: red;
+  background-color: transparent;
+  border: none;
+  font-weight: bolder;
 }
 
 body .website-content .in-press h1 {
