--- a/css_files/common.scss
+++ b/css_files/common.scss
@@ -29,7 +29,7 @@
             select {
                 padding: 10px 20px;
                 background-color: black;
-            
+
                 color: white;
                 border: none;
                 -moz-appearance: none;
@@ -37,13 +37,14 @@
                 -webkit-appearance: none;
                 text-align: center;
             }
-select:focus{
-    outline: none;
-}
+            select:focus {
+                outline: none;
+            }
             button {
                 background-color: transparent;
                 border: none;
                 margin: 0 10px;
+                padding: 10px 20px;
                 cursor: pointer;
                 a {
                     text-decoration: none;
