--- a/css_files/my-cart.scss
+++ b/css_files/my-cart.scss
@@ -172,6 +172,9 @@
             margin: 0px 0 10px 0;
             border-radius: 5px;
             font-weight: bolder;
+            a{
+                text-decoration: none;
+            }
         }
         .pay{
             background-color: red;
