--- a/css_files/product.css
+++ b/css_files/product.css
@@ -361,6 +361,140 @@ body .description-specification-reviews .specification .img img {
      object-fit: contain;
 }
 
+body .gaming-section-all {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  padding: 50px;
+}
+
+body .gaming-section-all h1 {
+  font-size: 47px;
+}
+
+body .gaming-section-all h1 span {
+  color: red;
+  font-weight: bolder;
+}
+
+body .gaming-section-all .top-picks {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 30px auto;
+  margin-bottom: 100px;
+}
+
+body .gaming-section-all .top-picks .card-1 {
+  width: 310px;
+  height: 380px;
+  background-color: #ceceee;
+  border-radius: 10px;
+  position: relative;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  padding: 11px;
+}
+
+body .gaming-section-all .top-picks .card-1 .head {
+  width: 100%;
+  height: 52%;
+}
+
+body .gaming-section-all .top-picks .card-1 .head .offer-red {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  background-color: red;
+  color: white;
+  position: absolute;
+  left: 0;
+  top: 20px;
+  font-weight: bolder;
+  z-index: 10;
+  padding: 5px 15px;
+  border-top-right-radius: 3px;
+  border-bottom-right-radius: 3px;
+}
+
+body .gaming-section-all .top-picks .card-1 .head img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+  border-radius: 5px;
+}
+
+body .gaming-section-all .top-picks .card-1 .tail {
+  margin-top: 10px;
+  width: 100%;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+  background-color: white;
+  border-radius: 5px;
+  text-align: left;
+  padding: 12px;
+}
+
+body .gaming-section-all .top-picks .card-1 .tail h4 {
+  color: black;
+  margin-bottom: 5px;
+  font-family: "Poppins", sans-serif;
+}
+
+body .gaming-section-all .top-picks .card-1 .tail .border {
+  height: 1px;
+  width: 100%;
+  background-color: #d2cbcb;
+}
+
+body .gaming-section-all .top-picks .card-1 .tail .price {
+  padding: 10px 0;
+}
+
+body .gaming-section-all .top-picks .card-1 .tail .price h5 {
+  color: red;
+  font-size: larger;
+}
+
+body .gaming-section-all .top-picks .card-1 .tail .price h5 span {
+  color: grey;
+  text-decoration: line-through;
+  font-size: small;
+}
+
+body .gaming-section-all .top-picks .card-1 .tail .price p {
+  color: green;
+  font-weight: bolder;
+}
+
+body .gaming-section-all .top-picks .card-1 .tail .order-btn {
+  width: 100%;
+}
+
+body .gaming-section-all .top-picks .card-1 .tail .order-btn input {
+  width: 100%;
+  padding: 8px 0;
+  background-color: red;
+  color: white;
+  border: none;
+  font-size: medium;
+  font-weight: bolder;
+  font-family: "Poppins", sans-serif;
+}
+
 body .brand-promise {
   padding: 30px;
   background-color: #ceceee;
@@ -414,10 +548,12 @@ body .brand-promise .promise-grid div h3 {
 body .reviews {
   padding: 30px 0;
   margin: auto;
+  background-color: white;
 }
 
 body .reviews h1 {
   text-align: center;
+  color: black;
 }
 
 body .reviews .review-l-r button {
@@ -453,7 +589,7 @@ body .reviews .review-small .review3 .head {
   height: 50%;
   text-align: center;
   background-color: transparent;
-  border: 2px solid #cbcbee;
+  border: 2px solid #626265;
   border-bottom: none;
   position: relative;
   border-top-right-radius: 10px;
